...

          {groups.length > 0 ? (
            <FlatList
              data={groups}
              renderItem={renderHomeGroupItem}
              keyExtractor={item => item.id!}
              testID="group-list"
              horizontal={false}
              showsHorizontalScrollIndicator={false}
              scrollEnabled={false}
              contentContainerStyle={styles.homeGroupsList}
            />
          ) : (
...
