...
        Allow other members to send you private messages. You can change this
        later.
      </Text>

      <View style={styles.buttonsContainer}>
        <Button
          title="Back"
          variant="outline"
          onPress={prevStep}
          style={styles.backButton}
        />
        <Button
          title="Continue"
...
            ]}>
            2
          </Text>
        </View>
        <Text
          style={[styles.stepLabel, step >= 2 ? styles.activeStepLabel : {}]}>
          Profile
        </Text>
      </View>

      <View
        style={[
          styles.progressLine,
...
