...
      />
      <Stack.Screen
        name="MySponsorships"
        component={MySponsorshipsScreen}
        options={{
          headerShown: true,
          title: 'My Sponsorships',
        }}
      />
      <Stack.Screen
        name="GratitudeJournal"
        component={GratitudeJournalScreen}
        options={{
...
